# FASS

./: CMakeLists.txt  main.cpp  main.h
package_managers/: Apt.cpp  Apt.h  PackageManager.cpp  PackageManager.h  Pacman.cpp  Pacman.h
utils/: border_layout.cpp  border_layout.h  config.cpp  config.h
